--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
-    "name": "google-spreadsheet-read",
-    "version": "0.0.1",
-    "description": "",
-    "main": "index.js",
-    "author": "Someone Somewhere",
-    "license": "ISC",
-    "private": true,
-    "dependencies": {
-        "lodash": "^3.9.3"
-    }
+  "name": "google-spreadsheet-read",
+  "version": "0.0.1",
+  "description": "",
+  "main": "index.js",
+  "author": "Someone Somewhere",
+  "license": "ISC",
+  "private": true,
+  "dependencies": {
+    "google-spreadsheet": "^1.0.1",
+    "lodash": "^3.9.3",
+    "q": "^1.4.1"
+  }
 }
