--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "ISC",
   "private": true,
   "dependencies": {
+    "edit-google-spreadsheet": "^0.2.19",
     "google-spreadsheet": "^1.0.1",
     "lodash": "^3.9.3",
     "q": "^1.4.1"
